--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,32 @@
-body {
-    background-color: bisque;
-}
 
-.hello {
-    color: red;
+.main {
+    display: flex;
+    width: 52%;
+    justify-content: space-around;
   }
+  
+  .score-section div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 116%;
+  }
+  
+  #inputsScore {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 13px;
+  }
+  
+  .score-container {
+    border: 2px solid;
+    width: 100%;
+    list-style: none;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 11px;
+  }
+  
