--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,16 @@
     justify-content: space-around;
   }
   
+  h1 {
+    margin-left: 15px;
+  }
+
   .score-section div {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 116%;
+    margin-left: -7px;
   }
   
   #inputsScore {
@@ -20,13 +25,25 @@
   }
   
   .score-container {
-    border: 2px solid;
+    border: 1px solid black;
     width: 100%;
     list-style: none;
-    padding: 16px;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 11px;
+    margin-top: 2px;
+  }
+
+  li {
+    padding: 5px;
+  }
+
+  li:nth-child(even) {
+    background-color: darkgray;
+  }
+
+  input {
+    height: 20px;
   }
   
