--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ font-family: Poppins;
   display: flex;
   width: 90%;
   justify-content: space-around;
+  margin-top: -50px;
 }
 
 h1 {
@@ -44,7 +45,8 @@ h2 {
   color: #fff;
   font-size: 1rem;
   background-color: #5f9ea0;
-  color: #ff
+  color: #fff;
+  font-weight: 600;
 }
 
 .submitBtn:hover {
@@ -86,6 +88,7 @@ h2 {
 
 li {
   padding: 5px;
+  font-weight: 400;
 }
 
 li:nth-child(even) {
